# Odometry-and-Control-of-Omnidirectional-Robots

./: CMakeLists.txt  LICENSE  README.md  instructions.txt  package.xml
cfg/: parameters.cfg  robotparameters.cfg
launch/: project_1.launch
src/: checkParams.cpp  odometry.cpp  tfBroadcast.cpp  velocities.cpp  velocitiesTicks.cpp  wheelsVel.cpp
srv/: ResetPose.srv
